fixed submit button alignment

--- a/css/contactme.css
+++ b/css/contactme.css
@@ -305,6 +305,7 @@ textarea::placeholder {
   background: #06248f;
   color: #eee;
   border-radius: 6px;
+  line-height: 1rem;
   height: 3rem;
   font-size: 1.2rem;
   margin: 1rem 0 2rem 0;
